--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "chart.js": "^4.4.9",
     "chartjs-2": "^0.0.1-security",
     "react": "^19.1.0",
